[gd_scene load_steps=7 format=3 uid="uid://bsjtfu2i0eyou"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/Windows/CorticalProperties/Parts/CorticalPropertiesConnections.gd" id="1_kpjok"]
[ext_resource type="Texture2D" uid="uid://cgrjmannf3xnp" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_S.png" id="2_6cgqo"]
[ext_resource type="Texture2D" uid="uid://dryfi4tlhq5mq" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_C.png" id="3_8k7yo"]
[ext_resource type="Texture2D" uid="uid://ddg6hll5cu8vb" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_H.png" id="4_kwhmv"]
[ext_resource type="Texture2D" uid="uid://ejh64qo18s05" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Plus_D.png" id="5_sawim"]
[ext_resource type="PackedScene" uid="uid://b4cfpdwwgj8q8" path="res://BrainVisualizer/UI/GenericElements/Scroll/ScrollGeneric/ScrollSectionGeneric.tscn" id="6_gygt7"]

[node name="CorticalPropertiesConnections" type="VBoxContainer"]
script = ExtResource("1_kpjok")

[node name="recursive" type="Button" parent="."]
layout_mode = 2
text = "None Recursive"

[node name="L_A" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label_Afferent" type="Label" parent="L_A"]
layout_mode = 2
size_flags_horizontal = 3
text = "Afferent (inputs)"

[node name="Add" type="TextureButton" parent="L_A"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("2_6cgqo")
texture_pressed = ExtResource("3_8k7yo")
texture_hover = ExtResource("4_kwhmv")
texture_disabled = ExtResource("5_sawim")
ignore_texture_size = true
stretch_mode = 0

[node name="Afferents" parent="." instance=ExtResource("6_gygt7")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="L_E" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label_Efferent" type="Label" parent="L_E"]
layout_mode = 2
size_flags_horizontal = 3
text = "Efferent (outputs)"

[node name="Add" type="TextureButton" parent="L_E"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("2_6cgqo")
texture_pressed = ExtResource("3_8k7yo")
texture_hover = ExtResource("4_kwhmv")
texture_disabled = ExtResource("5_sawim")
ignore_texture_size = true
stretch_mode = 0

[node name="Efferents" parent="." instance=ExtResource("6_gygt7")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="L_A/Add" to="." method="_user_pressed_add_afferent_button"]
[connection signal="pressed" from="L_E/Add" to="." method="_user_pressed_add_efferent_button"]
